--- a/site.css
+++ b/site.css
@@ -41,7 +41,8 @@
   
   body {
     font-family: Arial, sans-serif;
-    color: #000000;
+    color: #ffffff;
+    text-align: center;
     
   }
   
@@ -60,7 +61,7 @@
   
   h3{
     font-family:'Alegreya', serif; ;
-    text-align: left;
+    text-align: center;
     font-size: 20px;
   }
   
@@ -75,23 +76,9 @@
   .container{
     display: flex;
     width: 100%;
-    flex-wrap: wrap;
     padding: 0%;
-  }
-  
-  .split{
-    flex-basis: 46%;
-    display: flex;
-    flex-direction: column;
-    padding: 2%;
-    text-align: left;
-    align-items: center;
-  }
-  
-  .split img{
-    width: 100%;
-    height: auto;
-    align-items: center;
+    margin: auto;
+    justify-content: center;
   }
   
   .button{
@@ -125,3 +112,14 @@
   }
 
   body { margin: 0; padding: 0; }
+  body {
+    background-image: url('images/website-bg.jpg');
+  }
+  .item body{
+    color: black;
+    font-size: 24px;
+  }
+
+  .myCarousel{
+    margin: auto;
+  }
